--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
+#general
+server.port=8080
+#
+#DATABASE
+spring.datasource.url=jdbc:mysql://localhost:3306/db_cens
+
+spring.datasource.username=root
+spring.datasource.password=
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
 
