--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,4 +8,9 @@ spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+# JWT
+security.jwt.secret=ghk45jgherogho834go3h4g
+security.jwt.issuer=Main
+#La sesion dura una semana
+security.jwt.ttlMillis=604800000
 
