--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 #general
 server.port=8080
-#
+
 #DATABASE
-spring.datasource.url=jdbc:mysql://localhost:3306/db_cens
+spring.datasource.url=jdbc:mysql://localhost:3306/db_cens?useSSL=false
 
 spring.datasource.username=root
 spring.datasource.password=
