modelos de todos las tablas y implementacion de algunas

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,6 @@ security.jwt.issuer=Main
 #La sesion dura una semana
 security.jwt.ttlMillis=604800000
 
+#thymeleaft
+spring.thymeleaf.enabled=true
+
